// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Play /> should match snapshot 1`] = `
<DocumentFragment>
  <div
    category="gamewindow"
    data-testid="LangDataProvider"
  >
    <div>
      gamewindow
    </div>
    <div
      class="header"
    >
      <div
        class="headerContent"
      >
        <div
          class="topContainer"
        >
          <div
            class="runningDateTime"
          >
            <div
              class="testRunningDateTime"
              data-testid="RunningDateTime"
            />
          </div>
        </div>
        <div
          class="bottomContainer"
        >
          <div
            class="announcementWrapper"
          >
            <div
              class="testAnnouncement"
              data-testid="Announcement"
              ismobile="false"
              viewtype="zy"
            />
          </div>
          <div
            class="balancesWrapper"
          >
            <div
              class="maxPayoutWrapper"
            >
              <div
                class="maxPayout"
              >
                <div
                  class="amountText"
                >
                  <span
                    class="amountFigure"
                  >
                    <div
                      data-testid="FormattedMessage"
                      id="maxPayoutPerBet"
                    >
                      <div>
                        maxPayoutPerBet
                      </div>
                    </div>
                    undefined 
                    <div
                      compactstart="100000000"
                      data-testid="MoneyFormatToggle"
                      value="700000000.000000"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="accountBalance"
              compactstart="100000000"
              data-testid="AccountBalance"
              format="{currencyCode} {balance}"
              initialbalanceinfo="{\\"playableBalance\\":\\"1457.800000\\",\\"currencyCode\\":\\"ZWD\\"}"
              isautoupdate="true"
              withrefreshbutton="true"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="body"
    >
      <div
        class="content"
      >
        <div
          class="iframeSpinner"
          color="primary"
          data-testid="Spinner"
        >
          <div>
            Loading Spinner
          </div>
        </div>
        <iframe
          class="gameIframe"
          src="https://eyecon.classicku.com/launch/lek?uid=ANqWb0TXAFr1%252BZT7aQmY%252F1M%253D&guid=124275588462ff2e5f3973e3.1098258&gameid=71656&brand=LEK&cur=ZWD&lang=en&homeURL=https%3A%2F%2Fgames.classicku.com%2Fclosegame%3FgameID%3DDVbr%26clientID%3DML641"
        />
      </div>
    </div>
    <div
      data-testid="Dialog"
      maxwidth="xs"
    >
      <div
        data-testid="DialogContent"
      >
        <div
          classes="{\\"root\\":\\"zeroBalanceMessage\\"}"
          data-testid="DialogContentText"
        >
          <div
            data-testid="FormattedMessage"
            id="zeroBalance"
          >
            <div>
              zeroBalance
            </div>
          </div>
        </div>
        <div
          data-testid="DialogActions"
        >
          <button
            color="secondary"
            data-testid="Button"
            variant="contained"
          >
            <div
              data-testid="FormattedMessage"
              id="ok"
            >
              <div>
                ok
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Play /> should match snapshot 2`] = `
<DocumentFragment>
  <div
    category="gamewindow"
    data-testid="LangDataProvider"
  >
    <div>
      gamewindow
    </div>
    <div
      data-testid="Announcement"
      ismobile="true"
      viewtype="zy"
    />
    <div
      class="body mobileBody"
    >
      <div
        class="content"
      >
        <div
          class="iframeSpinner"
          color="primary"
          data-testid="Spinner"
        >
          <div>
            Loading Spinner
          </div>
        </div>
        <iframe
          class="gameIframe"
          src="https://eyecon.classicku.com/launch/lek?uid=ANqWb0TXAFr1%252BZT7aQmY%252F1M%253D&guid=124275588462ff2e5f3973e3.1098258&gameid=71656&brand=LEK&cur=ZWD&lang=en&homeURL=https%3A%2F%2Fgames.classicku.com%2Fclosegame%3FgameID%3DDVbr%26clientID%3DML641"
        />
      </div>
    </div>
    <div
      data-testid="Dialog"
      maxwidth="xs"
    >
      <div
        data-testid="DialogContent"
      >
        <div
          classes="{\\"root\\":\\"zeroBalanceMessage\\"}"
          data-testid="DialogContentText"
        >
          <div
            data-testid="FormattedMessage"
            id="zeroBalance"
          >
            <div>
              zeroBalance
            </div>
          </div>
        </div>
        <div
          data-testid="DialogActions"
        >
          <button
            color="secondary"
            data-testid="Button"
            variant="contained"
          >
            <div
              data-testid="FormattedMessage"
              id="ok"
            >
              <div>
                ok
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
